objects/SalesAgreementProduct.object
<CustomObject>
    <fields>
        <fullName>PMC_CLM_ProductSubFamily__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.PMC_CPQ_ProductSubFamily__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Annual_Tons__c</fullName>
        <description>States the Annual Tons for Agreement year</description>
        <label>Annual Tons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Bin_Space_Tons__c</fullName>
        <description>States the Total Bin Space Tons for Agreement year</description>
        <label>Bin Space Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Individual_Incentive__c</fullName>
        <description>This field states the Total Individual Incentive received from a Product.</description>
        <label>Individual Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MaterialGroup__c</fullName>
        <description>States the Material Group of the Product</description>
        <formula>TEXT(PricebookEntry.Product2.PMC_CPQ_MaterialGroup__c)</formula>
        <label>Material Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Portfolio_Incentive__c</fullName>
        <description>This field states the Total Portfolio Incentive received from a product</description>
        <label>Portfolio Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PotentialGrowthIncentive__c</fullName>
        <description>This field states the Growth Incentive received from a product.</description>
        <label>Potential Growth Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Potential_Ex_space_Incentive__c</fullName>
        <description>This field States the Growth Incentive received from a product</description>
        <label>Potential Ex-space Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Potential_Volume_Incentive__c</fullName>
        <description>This field States the Total Volume Incentive received from a product.</description>
        <label>Potential Volume Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Target__c</fullName>
        <description>States the Target set for a Product for this year.</description>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PMC_SS_RestrictionSalesAgreementProducts</fullName>
        <active>true</active>
        <description>This validation rule will restrict user from adding Sales Agreement Product to Sales Agreement if Sales Agreement Status is other than Draft</description>
        <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$User.LastName &lt;&gt; &apos;Platform Integration User&apos;, 
NOT(
ISPICKVAL(SalesAgreement.Status , &quot;Draft&quot;))
)</errorConditionFormula>
        <errorMessage>Sales Agreement Product cannot be added or updated at this stage. Please Amend this Sales Agreement</errorMessage>
    </validationRules>
</CustomObject>